# ClimbingBetaBrakes

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py
docs/: api.md
src/: main.py
src/api/: models.py  roboflow_client.py
src/core/: connection.py  hold.py  movement_type.py  route.py
src/core/analysis/: hold_analyzer.py
src/gui/: main_window.py
src/gui/widgets/: hold_viewer.py  loading_window.py  route_info_dialog.py  route_info_panel.py  route_toolbar.py  startup_window.py
src/gui/workers/: detection_worker.py
src/storage/models/: route_model.py
src/storage/repositories/: route_repository.py
src/utils/: __init__.py  config.py  logger.py  route_image_processor.py
