[tool.poetry]
name = "pjf-project"
version = "0.1.0"
description = "Climbing Route Creator is a mobile application that helps climbers create, share, and discover climbing routes. Using advanced computer vision technology (Roboflow API), the app automatically detects holds on climbing wall photos and allows users to create routes by selecting holds and adding descriptions. Think of it as a collaborative platform for climbers to share their favorite routes and discover new challenges."
authors = ["Floressek <szymon.florek@student.wat.edu.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
logging = "^0.4.9.6"
path = "^17.1.0"
datetime = "^5.5"
pydantic = "^2.10.4"
supervision = "^0.25.1"
roboflow = "^1.1.50"
shapely = "^2.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
